Updated grammar mistakes

--- a/essays/7.9-billion-multilingual-artists.md
+++ b/essays/7.9-billion-multilingual-artists.md
@@ -23,7 +23,7 @@ An example of a pattern is the observer pattern, where an object, called a subje
 Another example of a design pattern is the Model-View-Controller pattern, that divides the related program logic into three interconnected elements: model, view and controller. MVC mostly relates to the UI/interaction layer of an application. In our Meteor-application we can divide the system into these elements, with MongoDB as the model, Blaze as the view and Flow Router as the controller. This front-end design pattern can also be seen in more back-end systems, like a helicopter-control system we implemented this spring. In this case, the view of the system is the helicopter's response and motion to the software. The model is the mathematical model derived and data needed to control the helicopter, while the controller is the PID-regulators and filters needed to control the "view" and motion of helicopter, and to update the optimal parameters of the model.
 
 ### Globalizing the planet
-As I started off with, there are a dramatic increase in the number of people having basic knowledge about software development. As this number continue increasing (along with number of programming languages), the need for having fundamental design patterns will continue to escalate. For the software-world to become successfully globalized, the fundamental differences between programming languages and code segments needs to be minimized. Even though it sounds difficult to learn a new language, if the grammar and vocabulary sounds somewhat similar to your own language, you are almost there! Let’s continue to praise the design patterns in order to accomplish our goal: to have 7.9 billion multilingual software-developers ready to hack their way through life.
+As I started off with, there is a dramatic increase in the number of people having basic knowledge about software development. As this number continue to increase (along with number of programming languages), the need for having fundamental design patterns will do the same. For the software-world to become successfully globalized, the fundamental differences between programming languages and code segments need to be minimized. Even though it sounds difficult to learn a new language; if the grammar and vocabulary sounds somewhat similar to your own language, you are almost there! Let’s continue to praise the design patterns in order to accomplish our goal: to have 7.9 billion multilingual software-developers ready to hack their way through life.
 
 
 
